--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@eslint/js": "^9.27.0",
     "@types/cors": "^2.8.18",
     "@types/express": "^4.17.1",
+    "@types/node": "^22.15.29",
     "eslint": "^9.27.0",
     "globals": "^16.2.0",
     "nodemon": "^3.1.10",
@@ -26,6 +27,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "kafkajs": "^2.2.4",
+    "mongoose": "^8.15.1",
     "redis": "^5.1.1",
     "socket.io": "^4.8.1"
   }
