--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,6 +5,7 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "sourceMap": true,
+    "types" :["node"],
     "outDir": "dist"
   },
   "include": ["src"]
